--- a/app/src/main/res/layout/item_grocery.xml
+++ b/app/src/main/res/layout/item_grocery.xml
@@ -4,22 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:background="@drawable/card">
 
     <!-- To display item quantity -->
+    <ImageView
+        android:id="@+id/imgItemImage"
+        android:layout_width="160dp"
+        android:layout_height="90dp"
+        android:src="@drawable/vegetables"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ibDelete" />
+
     <TextView
         android:id="@+id/txtItemName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
         android:text="Item"
         android:textColor="@color/white"
-        android:textSize="32sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txtTotalCostTitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,27 +37,23 @@
         android:id="@+id/txtItemQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="5"
+        android:text="Quantity: 5"
         android:textColor="@color/white"
-        android:textSize="24sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="@+id/txtItemName"
-        app:layout_constraintStart_toEndOf="@+id/txtItemName"
-        app:layout_constraintTop_toTopOf="@+id/txtItemName" />
+        app:layout_constraintStart_toStartOf="@+id/txtItemName"
+        app:layout_constraintTop_toBottomOf="@+id/txtItemName" />
 
     <!-- To display item price -->
     <TextView
         android:id="@+id/txtItemPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="₹10"
+        android:layout_marginStart="16dp"
+        android:text="Price: ₹10"
         android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtItemName"
+        app:layout_constraintBottom_toBottomOf="@+id/txtItemQuantity"
         app:layout_constraintStart_toEndOf="@+id/txtItemQuantity"
-        app:layout_constraintTop_toTopOf="@+id/txtItemName" />
+        app:layout_constraintTop_toTopOf="@+id/txtItemQuantity" />
 
     <ImageButton
         android:id="@+id/ibDelete"
@@ -58,9 +62,10 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_action_delete"
-        app:layout_constraintBottom_toBottomOf="@+id/txtItemName"
+        app:layout_constraintBottom_toTopOf="@+id/txtItemTotalCost"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtItemName" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
     <!-- To display total cost of grocery items -->
     <TextView
@@ -80,12 +85,12 @@
         android:id="@+id/txtTotalCostTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:text="Total Cost:"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtItemName"
-        app:layout_constraintTop_toBottomOf="@+id/txtItemName" />
+        app:layout_constraintTop_toBottomOf="@+id/txtItemQuantity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
